[package]
name = "tch-nms"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
anyhow = "1.0.45"
cc = "1.0.72"
torch-build = "0.1.0"

[dependencies]
libc = "0.2.107"
static_assertions = "1.1.0"
tch = "0.6.1"
torch-sys = "0.6.1"

[features]
default = ["parallel-build"]
parallel-build = ["torch-build/parallel-build"]
